--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   <link rel="stylesheet" href="./css/style.css">
   <link rel="stylesheet" href="./css/global.css">
   <link rel="stylesheet" href="./css/header.css">
+  <link rel="stylesheet" href="./css/introducao.css">
+  <link rel="stylesheet" href="./css/resp.css">
+
 
   <title>Kev Portifólio</title>
 </head>
@@ -13,7 +16,7 @@
   <!-- cabeçalho !-->
   <header class="header">
     <img src="./img/marca.svg" alt="Logo">
-  </header>
+
   <!-- estrutura de navegação !-->
   <nav>
     <ul class="header-menu">
@@ -22,9 +25,92 @@
       <li><a href="#formacao">Formação</a></li>
       <li><a href="#contato">Contato</a></li>
 
-
     </ul>
   </nav>
+</header>
+<!-- conteudo principal-->
+<main class="introducao">
+  <img src="./img/perfil.jpg" alt="Imagem">
+  <!--contaudo-->
+  <div>
+    <h1>Desenvolvedor<br> Front-End & <br> Comunicador.</h1>
+    <p>Localizado em São Paulo🌁</p>
+
+  </div>
+
+</main>
+
+<!--sessão do site ponto de referencia-->
+<!--aria label para definir um ponto de referência-->
+<section class="experiencia" id="experiencia" aria-label="Experiência"> 
+  <h2 class="Subtitulo">Experiência</h2>
+  <div>
+    <p class="experiencia-texto">Desenvolvo pequenos projetos utilizando <strong>HTML</strong>,  
+      <strong>CSS</strong> e <strong>JavaScript</strong>. 
+      Para aplicativos web como rede social.</p>
+
+
+      <div class="empresa">
+        <span class="empresa-ano">2018</span>
+        <h3 class="empres-titulo">Grupo Trade Call Service</h3>
+        <span class="empres-titulo">Operador de telemarketing</span>
+        <p class="empresa.texto">Realizei atendimento telefônico ativo, conduzindo pesquisas de clientes com diferentes perfis, em colaboração com a equipe, o que nos permitiu alcançar 
+          metas conjuntas e individuais.</p>
+          <ul class="empresa-habilidades">
+            <li>Habilidade01</li>
+            <li>Habilidade02</li>
+            <li>Habilidade03</li>
+            <li>Habilidade04</li>
+          </ul>
+      </div>
+
+      <div class="empresa">
+        <span class="empresa-ano">2019</span>
+        <h3 class="empres-titulo">Araujo & Augusto Advogados Associados</h3>
+        <span class="empres-titulo">Analista de Negócios</span>
+        <p class="empresa.texto">Durante meu estágio na 
+          área de negociação, atuei em cobranças bancárias e interações, auxiliando clientes em diversas plataformas, como telefone, e-mail e WhatsApp, esclarecendo 
+          dúvidas e fornecendo suporte necessário.</p>
+          <ul class="empresa-habilidades">
+            <li>Excel</li>
+            <li>Word</li>
+            <li>PJ</li>
+            <li>PF</li>
+          </ul>
+      </div>
+
+      <div class="empresa">
+        <span class="empresa-ano">2020</span>
+        <h3 class="empres-titulo">Conta digital Neon</h3>
+        <span class="empres-titulo">Analista de Negócios</span>
+        <p class="empresa.texto">Com foco em planejamento, gerenciamento e monitoramento de conteúdos, 
+          utilizo redes sociais e canais de relacionamento digitais para me comunicar de forma eficiente e clara com os clientes, 
+          além de identificar e gerenciar potenciais crises nas redes sociais da empresa, elevando o nível de relevância 
+          da empresa nas mídias sociais.</p>
+          <ul class="empresa-habilidades">
+            <li>Pacotte Office</li>
+            <li>Genesys</li>
+            <li>Salesforce</li>
+            <li>Zendesk</li>
+            <li>MEI</li>
+      
+          </ul>
+      </div>
+
+
+
+
+
+
+
+
+  </div>
+
+
+  
+
+
+</section>
   
 </body>
 </html>
