--- a/index.html
+++ b/index.html
@@ -3,37 +3,43 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Desenvolvedor Front End e Comunicador, localizado em São Paulo.">
   <link rel="stylesheet" href="./css/style.css">
   <link rel="stylesheet" href="./css/global.css">
   <link rel="stylesheet" href="./css/header.css">
   <link rel="stylesheet" href="./css/introducao.css">
   <link rel="stylesheet" href="./css/resp.css">
+  <link rel="stylesheet" href="./css/experiencia.css">
+  <link rel="stylesheet" href="./css/formacao.css">
+  <link rel="stylesheet" href="./css/footer.css">
+  <link rel="shortcut icon" href="img/kev.jpeg" type="image/x-icon">
 
 
-  <title>Kev Portifólio</title>
+
+  <title>Portifólio Kev</title>
 </head>
 <body>
   <!-- cabeçalho !-->
   <header class="header">
-    <img src="./img/marca.svg" alt="Logo">
+    <img src="./img/marca.png" alt="Logo">
 
   <!-- estrutura de navegação !-->
   <nav>
     <ul class="header-menu">
       <!-- #link internos-->
-      <li><a href="#experiencia">Experiência</a></li>
-      <li><a href="#formacao">Formação</a></li>
-      <li><a href="#contato">Contato</a></li>
+      <li><a class="botao" href="#experiencia">Experiência</a></li>
+      <li><a class="botao" href="#formacao">Formação</a></li>
+      <li><a class="botao" href="#contato">Contato</a></li>
 
     </ul>
   </nav>
 </header>
 <!-- conteudo principal-->
 <main class="introducao">
-  <img src="./img/perfil.jpg" alt="Imagem">
+  <img src="./img/perfil.jpeg" alt="Imagem" width="360" height="520">
   <!--contaudo-->
   <div>
-    <h1>Desenvolvedor<br> Front-End & <br> Comunicador.</h1>
+    <h1>Desenvolvedor<br> Front-End & <br>  Comunicador.</h1>
     <p>Localizado em São Paulo🌁</p>
 
   </div>
@@ -43,44 +49,17 @@
 <!--sessão do site ponto de referencia-->
 <!--aria label para definir um ponto de referência-->
 <section class="experiencia" id="experiencia" aria-label="Experiência"> 
-  <h2 class="Subtitulo">Experiência</h2>
+  <h2 class="subtitulo">Experiência</h2>
   <div>
-    <p class="experiencia-texto">Desenvolvo pequenos projetos utilizando <strong>HTML</strong>,  
-      <strong>CSS</strong> e <strong>JavaScript</strong>. 
-      Para aplicativos web como rede social.</p>
+    <p class="experiencia-texto">Desenvolvo pequenos projetos🤝 utilizando <strong>HTML</strong>,  
+      <strong>CSS</strong> e <strong>JavaScript</strong>.<br> 
+      Para aplicativos web.🖥️</p>
 
 
+
+      
       <div class="empresa">
-        <span class="empresa-ano">2018</span>
-        <h3 class="empres-titulo">Grupo Trade Call Service</h3>
-        <span class="empres-titulo">Operador de telemarketing</span>
-        <p class="empresa.texto">Realizei atendimento telefônico ativo, conduzindo pesquisas de clientes com diferentes perfis, em colaboração com a equipe, o que nos permitiu alcançar 
-          metas conjuntas e individuais.</p>
-          <ul class="empresa-habilidades">
-            <li>Habilidade01</li>
-            <li>Habilidade02</li>
-            <li>Habilidade03</li>
-            <li>Habilidade04</li>
-          </ul>
-      </div>
-
-      <div class="empresa">
-        <span class="empresa-ano">2019</span>
-        <h3 class="empres-titulo">Araujo & Augusto Advogados Associados</h3>
-        <span class="empres-titulo">Analista de Negócios</span>
-        <p class="empresa.texto">Durante meu estágio na 
-          área de negociação, atuei em cobranças bancárias e interações, auxiliando clientes em diversas plataformas, como telefone, e-mail e WhatsApp, esclarecendo 
-          dúvidas e fornecendo suporte necessário.</p>
-          <ul class="empresa-habilidades">
-            <li>Excel</li>
-            <li>Word</li>
-            <li>PJ</li>
-            <li>PF</li>
-          </ul>
-      </div>
-
-      <div class="empresa">
-        <span class="empresa-ano">2020</span>
+        <span class="empresa-ano">2020-Atual</span>
         <h3 class="empres-titulo">Conta digital Neon</h3>
         <span class="empres-titulo">Analista de Negócios</span>
         <p class="empresa.texto">Com foco em planejamento, gerenciamento e monitoramento de conteúdos, 
@@ -99,6 +78,104 @@
 
 
 
+      <div class="empresa">
+        <span class="empresa-ano">2019-20</span>
+        <h3 class="empres-titulo">Araujo & Augusto Advogados Associados</h3>
+        <span class="empres-titulo">Analista de Negócios</span>
+        <p class="empresa.texto">Durante meu estágio na 
+          área de negociação, atuei em cobranças bancárias e interações, auxiliando clientes em diversas plataformas, como telefone, e-mail e WhatsApp, esclarecendo 
+          dúvidas e fornecendo suporte necessário.</p>
+          <ul class="empresa-habilidades">
+            <li>Excel</li>
+            <li>Word</li>
+            <li>PJ</li>
+            <li>PF</li>
+          </ul>
+      </div>
+
+
+
+      <div class="empresa">
+        <span class="empresa-ano">2018-19</span>
+        <h3 class="empres-titulo">Grupo Trade Call Service</h3>
+        <span class="empres-titulo">Operador de telemarketing</span>
+        <p class="empresa.texto">Realizei atendimento telefônico ativo, conduzindo pesquisas de clientes com diferentes perfis, em colaboração com a equipe, o que nos permitiu alcançar 
+          metas conjuntas e individuais.</p>
+          <ul class="empresa-habilidades">
+            <li>Comunicação</li>
+            <li>Trabalho em Equipe</li>
+            <li>Metas</li>
+            <li>Discador</li>
+          </ul>
+      </div>
+
+  </div>
+
+</section>
+
+<section class="formacao" id="formacao" aria-label="Formação">
+  <div class="formacao-container">
+    <h2 class="subtitulo">Formação</h2>
+    <div>
+      <p class="formacao-texto">Tenho técnico em Informática pela Federal e atualmente estou estudando tecnologia no curso  de 
+        <strong>Desenvolvimento de Software Multiplataforma</strong> de nível <strong>Técnologo</strong> o referido curso seleciona e aplica conceitos, 
+        métodos e tecnologias de Linguagens de Programação, Banco de Dados, Engenharia de Software, Segurança da Informação e 
+        Inteligência Artificial, propondo soluções tecnológicas. Além disso, tenho formações complementares em Comunicação e Marketing me mantenho sempre atualizado com cursos 
+        intensivos online.</div>
+
+        <ul class="faculdade-lista">
+          <li class="faculdade">
+          <span class="faculdade-tipo">Técnologo</span>
+          <h3 class="faculdade-curso">Desenvolvimento de Software Multiplataformas</h3>
+          <span class="faculdade-instituicao">FATEC Luigi Papaiz (Faculdade de Tecnologia de Diadema)</span>
+          </li>
+
+          <li class="faculdade">
+            <span class="faculdade-tipo">Especialização</span>
+            <h3 class="faculdade-curso">Comunicação e Marketing</h3>
+            <span class="faculdade-instituicao">Universidade Anhembi Morumbi</span>
+            </li>
+
+            <li class="faculdade">
+              <span class="faculdade-tipo">Técnologo</span>
+              <h3 class="faculdade-curso">Gestão de Marketing</h3>
+              <span class="faculdade-instituicao">UNIP (Universidade Paulista)</span>
+              </li>
+
+              <li class="faculdade">
+                <span class="faculdade-tipo">Técnico</span>
+                <h3 class="faculdade-curso">Técnico em Informática</h3>
+                <span class="faculdade-instituicao"> IFF (Instituto Federal Fluminense de Ciência e Tecnologia)</span>
+                </li>
+        
+        </ul>
+        <div class="formacao-extra">
+          <div class="cursos">
+            <h3>Cursos Complementares</h3>
+            <ul>
+              <li>Design Thinking <span>IBM</span></li>
+              <li>Firebase <span>Udemy</span></li>
+              <li>Google Cloud <span>Google Cloud Skills Boost</span></li>
+              <li>JavaScript Essentials <span>OpenEDG</span></li>
+              <li>Modelagem de Dados <span>Fundação Bradesco</span></li>
+              <li>Linguagem Python <span>Samsung Ocean</span></li>
+
+
+          </div>
+
+          <div class="idiomas">
+            <h3>Idiomas</h3>
+            <ul>
+              <li>Inglês <span>Intermediário B2</span></li>
+          </div>
+
+        </div>
+
+
+      </p>
+
+
+    </div>
 
 
 
@@ -107,10 +184,30 @@
   </div>
 
 
-  
-
 
 </section>
+
+<footer class="footer" id="contato">
+  <div class="footer-container">
+    <p class="footer-texto">Estou disponível para novos projetos no momento.<br>
+    Entre em contato comigo e marcamos uma conversa 👋</p>
+    <ul class="footer-contato">
+      <li><a href="https://mail.google.com/mail/u/0/#inbox?compose=GTvVlcSBmXGFgbJVssBspQdxzcHjQmTfxvfMzcGpzcqqDHCRzQthVWklQphwJsrwMXVxLwZlNBgSH">kevyn628@gmail.com</a></li>
+      <li>+55 11 97655-0667</li>
+      <li> <a href="https://github.com/Kev1nss"> @kev1nss </a></li>
+      <li> <a href="https://kev1nn.web.app/"> Site </a></li>
+
+      <p class="footer-copy"> Portifólio desenvolvido por <span class="fot">Kevyn S Silva.</span></p>
+
+
+    </ul>
+
+
+
+  </div>
+
+
+</footer>
   
 </body>
 </html>
