--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
         <strong>Desenvolvimento de Software Multiplataforma</strong> de nível <strong>Técnologo</strong> o referido curso seleciona e aplica conceitos, 
         métodos e tecnologias de Linguagens de Programação, Banco de Dados, Engenharia de Software, Segurança da Informação e 
         Inteligência Artificial, propondo soluções tecnológicas. Além disso, tenho formações complementares em Comunicação e Marketing me mantenho sempre atualizado com cursos 
-        intensivos online.</div>
+        intensivos online.🎓</div>
 
         <ul class="faculdade-lista">
           <li class="faculdade">
@@ -192,12 +192,13 @@
     <p class="footer-texto">Estou disponível para novos projetos no momento.<br>
     Entre em contato comigo e marcamos uma conversa 👋</p>
     <ul class="footer-contato">
-      <li><a href="https://mail.google.com/mail/u/0/#inbox?compose=GTvVlcSBmXGFgbJVssBspQdxzcHjQmTfxvfMzcGpzcqqDHCRzQthVWklQphwJsrwMXVxLwZlNBgSH">kevyn628@gmail.com</a></li>
-      <li>+55 11 97655-0667</li>
-      <li> <a href="https://github.com/Kev1nss"> @kev1nss </a></li>
-      <li> <a href="https://kev1nn.web.app/"> Site </a></li>
+      <li><a href="https://mail.google.com/mail/u/0/#inbox?compose=GTvVlcSBmXGFgbJVssBspQdxzcHjQmTfxvfMzcGpzcqqDHCRzQthVWklQphwJsrwMXVxLwZlNBgSH">
+        <img src="./img/email.png" class="log"alt="icone"> kevyn628@gmail.com</a></li>
+      <li> <a href="https://github.com/Kev1nss"><img src="./img/github.png" class="log"alt="icone"> @kev1nss </a></li>
+      
+      <li><a href="https://kev1nn.web.app/"><img src="./img/website.png" class="log"alt="icone"> Site </a></li>
 
-      <p class="footer-copy"> Portifólio desenvolvido por <span class="fot">Kevyn S Silva.</span></p>
+      <p class="footer-copy"> Portifólio desenvolvido por <span class="fot"><a href="https://www.linkedin.com/in/kevyn-silva-637b40156/">Kevyn S. Silva.</a></span></p>
 
 
     </ul>
