--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   <img src="./img/perfil.jpeg" alt="Imagem" width="360" height="520">
   <!--contaudo-->
   <div>
-    <h1>Desenvolvedor<br> Front-End & <br>  Comunicador.</h1>
+    <h1>Desenvolvedor & <br>  Comunicador.</h1>
     <p>Localizado em São Paulo🌁</p>
 
   </div>
